<resources>
    <string name="app_name">Xiankai Yang\'s MyRuns</string>
    <string name="app_domain">edu.dartmouth.cs.xiankai_yang</string>
    <string name="app_file_provider_authority">edu.dartmouth.cs.xiankai_yang.myruns.fileprovider</string>
    <string name="geo_api_key">AIzaSyB75iGhU1q8qFKLR03MQc2j_jxdKAqJ_AQ</string>
    <string name="project_number">180593373757</string>
    <string name="project_id">myruns-1486507445465</string>
    <string name="server_address">http://192.168.1.144:8080/</string>

    <!-- Profile Strings -->
    <string name="profile_photo">Profile Photo</string>
    <string name="profile_name">Name</string>
    <string name="profile_name_hint">Your Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_email_hint">Your Email</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_phone_hint">Your Phone Number</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_class">Class</string>
    <string name="profile_class_hint">e.g. 2012</string>
    <string name="profile_major">Major</string>
    <string name="profile_major_hint">Your Major</string>

    <string name="profile_photo_change">CHANGE</string>
    <string name="profile_save">SAVE</string>
    <string name="profile_cancel">CANCEL</string>

    <!-- Start Fragment Strings -->
    <string name="start_input_type">Input Type</string>
    <string name="start_activity_type">Activity Type</string>

    <string name="start_start">START</string>
    <string name="start_sync">SYNC</string>

    <!-- Settings Fragment Strings -->
    <string name="settings_account_preferences">Account Preferences</string>
    <string name="settings_user_profile">User Profile</string>
    <string name="settings_user_profile_description">Name, Email, Class, etc</string>
    <string name="settings_privacy_setting">Privacy Setting</string>
    <string name="settings_privacy_setting_description">Posting your records anonymously</string>

    <string name="settings_additional_settings">Additional Settings</string>
    <string name="settings_unit_preference">Unit Preference</string>
    <string name="settings_unit_preference_description">Select the units</string>
    <string-array name="settings_unit_preference_options">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>
    <string name="settings_comments">Comments</string>
    <string name="settings_comments_description">Please enter your comments</string>

    <string name="settings_misc">Misc.</string>
    <string name="settings_web_page">Web Page</string>
    <string name="settings_web_page_address">http://web.cs.dartmouth.edu/</string>

    <!-- Manual Entry Activity -->
    <string name="manual_entry_save">SAVE</string>
    <string name="manual_entry_cancel">CANCEL</string>

    <!-- Map Activity -->
    <string name="map_save">SAVE</string>
    <string name="map_cancel">CANCEL</string>

    <!-- Entry Detail Activity -->
    <string name="entry_detail_input_type">Input Type</string>
    <string name="entry_detail_activity_type">Activity Type</string>
    <string name="entry_detail_date_and_time">Date and time</string>
    <string name="entry_detail_duration">Duration</string>
    <string name="entry_detail_distance">Distance</string>
    <string name="entry_detail_calories">Calories</string>
    <string name="entry_detail_heart_rate">Heart Rate</string>
    <string name="entry_detail_delete">DELETE</string>

</resources>
