<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="edu.dartmouth.cs.myruns.ProfileActivity">

        <TextView style="@style/TextViewStyle" android:text="@string/profile_photo"/>
        <LinearLayout style="@style/HorizontalLayout">
            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/profile_default_image"/>
            <Button
                style="@style/ButtonStyle"
                android:onClick="onClickChangeProfilePhoto"
                android:text="@string/profile_photo_change"
                android:layout_margin="0dp"/>
        </LinearLayout>

        <TextView style="@style/TextViewStyle" android:text="@string/profile_name"/>
        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/profile_name"
            android:hint="@string/profile_name_hint"
            android:inputType="text"/>

        <TextView style="@style/TextViewStyle" android:text="@string/profile_email"/>
        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/profile_email"
            android:hint="@string/profile_email_hint"
            android:inputType="textEmailAddress"/>

        <TextView style="@style/TextViewStyle" android:text="@string/profile_phone"/>
        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/profile_phone"
            android:hint="@string/profile_phone_hint"
            android:inputType="phone"/>

        <TextView style="@style/TextViewStyle" android:text="@string/profile_gender"/>
        <RadioGroup style="@style/HorizontalLayout" android:id="@+id/profile_gender">
            <RadioButton
                style="@style/ButtonStyle"
                android:id="@+id/profile_female"
                android:text="@string/profile_gender_female"/>
            <RadioButton
                style="@style/ButtonStyle"
                android:id="@+id/profile_male"
                android:text="@string/profile_gender_male"/>
        </RadioGroup>

        <TextView style="@style/TextViewStyle" android:text="@string/profile_class"/>
        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/profile_class"
            android:hint="@string/profile_class_hint"
            android:inputType="number"/>

        <TextView style="@style/TextViewStyle" android:text="@string/profile_major"/>
        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/profile_major"
            android:hint="@string/profile_major_hint"
            android:inputType="text"/>

        <LinearLayout style="@style/HorizontalLayout">
            <Button
                style="@style/ButtonStyle"
                android:onClick="onClickSaveProfile"
                android:text="@string/profile_save"
                android:layout_margin="10dp"/>
            <Button
                style="@style/ButtonStyle"
                android:onClick="onClickCancelProfile"
                android:text="@string/profile_cancel"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>