<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entry_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.dartmouth.cs.xiankai_yang.myruns.controller.EntryDetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_detail_input_type"/>
    <EditText
        android:id="@+id/entry_detail_input_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_detail_activity_type"/>
    <EditText
        android:id="@+id/entry_detail_activity_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_detail_date_and_time"/>
    <EditText
        android:id="@+id/entry_detail_date_and_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_detail_duration"/>
    <EditText
        android:id="@+id/entry_detail_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_detail_distance"/>
    <EditText
        android:id="@+id/entry_detail_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_detail_calories"/>
    <EditText
        android:id="@+id/entry_detail_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_detail_heart_rate"/>
    <EditText
        android:id="@+id/entry_detail_heart_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

</LinearLayout>
